--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,13 +37,13 @@ spring:
       max-file-size: 100MB
       max-request-size: 100MB
 server:
-  port: 8080
+  port: 8181
 
-okta:
-  oauth2:
-    issuer: https://airbnb-backend.us.auth0.com/
-    client-id: ${AUTH0_CLIENT_ID}
-    client-secret: ${AUTH0_CLIENT_SECRET}
+#okta:
+#  oauth2:
+#    issuer: https://airbnb-backend.us.auth0.com/
+#    client-id: ${AUTH0_CLIENT_ID}
+#    client-secret: ${AUTH0_CLIENT_SECRET}
 
 application:
   auth0:
