--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,14 +37,14 @@ spring:
       max-file-size: 100MB
       max-request-size: 100MB
 server:
-  port: 8181
+  port: 8080
 
-#okta:
-#  oauth2:
-#    issuer: https://airbnb-backend.us.auth0.com/
-#    client-id: ${AUTH0_CLIENT_ID}
-#    client-secret: ${AUTH0_CLIENT_SECRET}
+okta:
+  oauth2:
+    issuer: https://airbnb-backend.us.auth0.com/
+    client-id: ${AUTH0_CLIENT_ID}
+    client-secret: ${AUTH0_CLIENT_SECRET}
 
 application:
   auth0:
-    role-landlord-id: rol_v1CpFU8josLg8YjC
+    role-landlord-id: rol_CRmDV1Jopx6SYhs0
